--- a/Calculator/Calculator.vcxproj
+++ b/Calculator/Calculator.vcxproj
@@ -162,6 +162,9 @@
     <Image Include="res\icon.png" />
     <Image Include="res\logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="res\shader.frag" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
